syntax = "proto3";

// Package Motor is used for defining a Motor node and its properties.
package sonrio.motor.api.v1;

message InitializeResponse {
  bool success = 1;
}

message CreateAccountResponse {
  bytes aes_psk = 1;
  string address = 2;
  bytes did_document = 3;
}

message LoginResponse {
  bool success = 1;
}

message CreateSchemaResponse {
  string did = 1;
}
